# SimpleEQ

./: .gitignore  CMakeLists.txt  SimpleEQ.jucer
Source/: PluginProcessor.cpp
